cmake_minimum_required(VERSION 3.10)
project(vdmg)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -O2")
include_directories(include)
file(GLOB_RECURSE SOURCES "src/*.cpp")
add_executable(bin ${SOURCES})
if (MINGW) 
    target_link_libraries(bin PRIVATE "stdc++exp")
endif()